--- a/lr.ipynb
+++ b/lr.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"headbrain_lr.csv\", error_bad_lines=False)"
+    "data = pd.read_csv("https://raw.githubusercontent.com/IamAbhiKaushik/ml_database/master/headbrain_lr.csv", error_bad_lines=False)"
    ]
   },
   {
