--- a/weather_forcast.ipynb
+++ b/weather_forcast.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,261 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>meantempm</th>\n",
+       "      <th>maxtempm</th>\n",
+       "      <th>mintempm</th>\n",
+       "      <th>meantempm_1</th>\n",
+       "      <th>meantempm_2</th>\n",
+       "      <th>meantempm_3</th>\n",
+       "      <th>meandewptm_1</th>\n",
+       "      <th>meandewptm_2</th>\n",
+       "      <th>meandewptm_3</th>\n",
+       "      <th>meanpressurem_1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>mindewptm_3</th>\n",
+       "      <th>maxpressurem_1</th>\n",
+       "      <th>maxpressurem_2</th>\n",
+       "      <th>maxpressurem_3</th>\n",
+       "      <th>minpressurem_1</th>\n",
+       "      <th>minpressurem_2</th>\n",
+       "      <th>minpressurem_3</th>\n",
+       "      <th>precipm_1</th>\n",
+       "      <th>precipm_2</th>\n",
+       "      <th>precipm_3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-01-04</th>\n",
+       "      <td>-14</td>\n",
+       "      <td>-12</td>\n",
+       "      <td>-18</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>-6.0</td>\n",
+       "      <td>-6.0</td>\n",
+       "      <td>-11.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-12.0</td>\n",
+       "      <td>1016.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-18.0</td>\n",
+       "      <td>1025.0</td>\n",
+       "      <td>1026.0</td>\n",
+       "      <td>1025.0</td>\n",
+       "      <td>1010.0</td>\n",
+       "      <td>1017.0</td>\n",
+       "      <td>1019.0</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-05</th>\n",
+       "      <td>-9</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>-14</td>\n",
+       "      <td>-14.0</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>-6.0</td>\n",
+       "      <td>-19.0</td>\n",
+       "      <td>-11.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>1033.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-13.0</td>\n",
+       "      <td>1043.0</td>\n",
+       "      <td>1025.0</td>\n",
+       "      <td>1026.0</td>\n",
+       "      <td>1023.0</td>\n",
+       "      <td>1010.0</td>\n",
+       "      <td>1017.0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-06</th>\n",
+       "      <td>-10</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>-14</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-14.0</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>-14.0</td>\n",
+       "      <td>-19.0</td>\n",
+       "      <td>-11.0</td>\n",
+       "      <td>1032.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-16.0</td>\n",
+       "      <td>1043.0</td>\n",
+       "      <td>1043.0</td>\n",
+       "      <td>1025.0</td>\n",
+       "      <td>1023.0</td>\n",
+       "      <td>1023.0</td>\n",
+       "      <td>1010.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-07</th>\n",
+       "      <td>-16</td>\n",
+       "      <td>-12</td>\n",
+       "      <td>-19</td>\n",
+       "      <td>-10.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-14.0</td>\n",
+       "      <td>-15.0</td>\n",
+       "      <td>-14.0</td>\n",
+       "      <td>-19.0</td>\n",
+       "      <td>1036.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-23.0</td>\n",
+       "      <td>1043.0</td>\n",
+       "      <td>1043.0</td>\n",
+       "      <td>1043.0</td>\n",
+       "      <td>1027.0</td>\n",
+       "      <td>1023.0</td>\n",
+       "      <td>1023.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-08</th>\n",
+       "      <td>-7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-16</td>\n",
+       "      <td>-16.0</td>\n",
+       "      <td>-10.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-22.0</td>\n",
+       "      <td>-15.0</td>\n",
+       "      <td>-14.0</td>\n",
+       "      <td>1035.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-17.0</td>\n",
+       "      <td>1055.0</td>\n",
+       "      <td>1043.0</td>\n",
+       "      <td>1043.0</td>\n",
+       "      <td>956.0</td>\n",
+       "      <td>1027.0</td>\n",
+       "      <td>1023.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 39 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            meantempm  maxtempm  mintempm  meantempm_1  meantempm_2  \\\n",
+       "date                                                                  \n",
+       "2015-01-04        -14       -12       -18         -4.0         -6.0   \n",
+       "2015-01-05         -9        -3       -14        -14.0         -4.0   \n",
+       "2015-01-06        -10        -6       -14         -9.0        -14.0   \n",
+       "2015-01-07        -16       -12       -19        -10.0         -9.0   \n",
+       "2015-01-08         -7         2       -16        -16.0        -10.0   \n",
+       "\n",
+       "            meantempm_3  meandewptm_1  meandewptm_2  meandewptm_3  \\\n",
+       "date                                                                \n",
+       "2015-01-04         -6.0         -11.0          -9.0         -12.0   \n",
+       "2015-01-05         -6.0         -19.0         -11.0          -9.0   \n",
+       "2015-01-06         -4.0         -14.0         -19.0         -11.0   \n",
+       "2015-01-07        -14.0         -15.0         -14.0         -19.0   \n",
+       "2015-01-08         -9.0         -22.0         -15.0         -14.0   \n",
+       "\n",
+       "            meanpressurem_1  ...  mindewptm_3  maxpressurem_1  maxpressurem_2  \\\n",
+       "date                         ...                                                \n",
+       "2015-01-04           1016.0  ...        -18.0          1025.0          1026.0   \n",
+       "2015-01-05           1033.0  ...        -13.0          1043.0          1025.0   \n",
+       "2015-01-06           1032.0  ...        -16.0          1043.0          1043.0   \n",
+       "2015-01-07           1036.0  ...        -23.0          1043.0          1043.0   \n",
+       "2015-01-08           1035.0  ...        -17.0          1055.0          1043.0   \n",
+       "\n",
+       "            maxpressurem_3  minpressurem_1  minpressurem_2  minpressurem_3  \\\n",
+       "date                                                                         \n",
+       "2015-01-04          1025.0          1010.0          1017.0          1019.0   \n",
+       "2015-01-05          1026.0          1023.0          1010.0          1017.0   \n",
+       "2015-01-06          1025.0          1023.0          1023.0          1010.0   \n",
+       "2015-01-07          1043.0          1027.0          1023.0          1023.0   \n",
+       "2015-01-08          1043.0           956.0          1027.0          1023.0   \n",
+       "\n",
+       "            precipm_1  precipm_2  precipm_3  \n",
+       "date                                         \n",
+       "2015-01-04       0.76       0.00       0.00  \n",
+       "2015-01-05       0.25       0.76       0.00  \n",
+       "2015-01-06       0.00       0.25       0.76  \n",
+       "2015-01-07       0.00       0.00       0.25  \n",
+       "2015-01-08       0.00       0.00       0.00  \n",
+       "\n",
+       "[5 rows x 39 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_url = \"https://raw.githubusercontent.com/amcquistan/WeatherPredictPythonML/master/end-part2_df.csv\"\n",
-    "df = pd.read_csv(data_url).set_index('date')\n"
+    "df = pd.read_csv(data_url).set_index('date')\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -141,16 +385,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f2148354320>]"
+       "array([ 19.86153709,  14.39746697,  10.3441886 ,  14.34162516,\n",
+       "         7.14763242,  -5.50742561,  16.94243434,  13.80248185,\n",
+       "        28.9645793 ,  -0.82079014,  25.57864993,  -6.49080772,\n",
+       "        20.63607188,  22.44965428, -10.77746604,  16.03892616,\n",
+       "         9.83455966,  24.41199199,  25.55340792,  27.75205551,\n",
+       "        17.45159778,   0.95779188,  21.25919837,  11.34289428,\n",
+       "         5.63888384,   5.69685887,  10.43070251,  16.82845577,\n",
+       "         8.20117122,  21.8305948 ,   6.30076683,  25.93939442,\n",
+       "        20.56194361,   8.32024171,  27.1346053 ,  12.21033226,\n",
+       "         7.42885657,  19.67812726,  13.07240217,  14.87617151,\n",
+       "        23.91292774,  20.1942031 ,  25.40414084,  15.41848743,\n",
+       "        -2.38043688,  21.91753043,  22.75023096,  12.43002693,\n",
+       "        -9.53491327,  24.5598572 ,  22.13864032,   5.97353117,\n",
+       "         1.52701112,  27.28907301,  26.33133983,  10.56747949,\n",
+       "        22.23049089,  -1.73162015,   7.53346567,  -3.56405894,\n",
+       "         5.79498631,  20.38133392,   8.74702479,  -2.31779619,\n",
+       "        23.53629775,  20.13692364,  -1.6695294 ,   6.04716925,\n",
+       "        19.94553816,  -2.65073893,  18.91605282,  27.76027272,\n",
+       "        -0.765861  ,  20.63106113,  21.52444644,  14.70108076,\n",
+       "        20.04004311,   8.79247173,  21.38369709,   4.91522983,\n",
+       "        26.18603651,   7.30294454,   1.03017163,  17.17899545,\n",
+       "         4.65004562,  25.72131733,  21.33767197,  25.4738005 ,\n",
+       "        21.03738446,   9.18815992,  27.6858269 ,  13.55883665,\n",
+       "        17.37675473,  21.60485132,  20.43364654,   1.34163623,\n",
+       "        25.33334993,  24.2467617 ,  -8.79989917,  13.29210996,\n",
+       "        25.42072711,   7.91743959,  -6.04327967,  11.80119558,\n",
+       "        30.08584507,  16.32503791,  11.32049771,  23.30001332,\n",
+       "        12.8183262 ,  28.24549886,   1.95244765,   4.78456251,\n",
+       "        21.13414641,  27.49672673,  23.85036006,  16.8332455 ,\n",
+       "        25.20720142,  15.40238859,  26.80682268,  12.07106192,\n",
+       "        16.85286594,   6.84933779,  -6.98296471,  -0.59180109,\n",
+       "         1.80319182,  13.92025215,  11.48718912,   0.71482322,\n",
+       "        23.31046209,  26.87146174,  26.6201215 ,  23.77730052,\n",
+       "         1.40792229,  16.17224157,  21.47949931,  24.67536457,\n",
+       "         4.86279274,  29.49679765,  27.85099365,  14.98949929,\n",
+       "         5.99453676,   5.69791934,  26.86075869,   2.2804564 ,\n",
+       "        -1.2298711 ,  24.69612661,  26.7062986 ,  19.16285024,\n",
+       "        12.49176823,  20.14238034,   2.14808968,   4.45308867,\n",
+       "         5.20612489,  20.27907965,  26.09599031,  -2.3676441 ,\n",
+       "        22.41185806,   2.2992967 ,  13.19869502,  13.88842011,\n",
+       "         8.00323375,  22.84109414,   1.88890103,  11.02293622,\n",
+       "        22.4493498 ,  -3.40474122, -12.74728501,  -8.82162597,\n",
+       "         2.43890236,  10.36484617,  -1.32283143,  -0.60434781,\n",
+       "        24.3145116 ,  25.62338816,  15.19681987,   5.42719267,\n",
+       "         0.90088524,  14.49813029,   7.31603229,  10.08655055,\n",
+       "         8.88410171,  24.48256545,  -7.42358242,  28.67587922,\n",
+       "        20.07449533,  23.9644884 ,  17.25606727,   5.70768596,\n",
+       "         6.55134314,  25.16632373,   2.78521304,  -1.47000821,\n",
+       "        -8.95746074,  15.43031193,  19.5851783 ,  25.53866511,\n",
+       "        12.65371885,  21.19464756, -14.19817577,  22.49942658])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x7f66ea4d1940>]"
+      ]
+     },
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -168,7 +481,8 @@
     }
    ],
    "source": [
-    "#X_test[\"meantempm_1\"]\n"
+    "#X_test[\"meantempm_1\"]\n",
+    "plt.plot(X_test[\"meantempm_1\"], prediction)"
    ]
   },
   {
